# sltools

./: LICENSE  README.md  pyproject.toml  spec.md
src/sltools/: jobs.py  nodes.py  reserve.py  sltop.py
src/sltop/: main.py  slurm.py
