[project]
name = "sltop"
version = "0.1.0"
description = "A top-like queue viewer for Slurm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "tyro>=1.0.3",
]

[project.scripts]
sltop = "sltop.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
